# RachaHabitos

./: .gitignore  .gitmodules  Makefile  README.md  RachaHabito.py  RachaHabito.service  claseHabitos.py  instalar.md  miGui.py  pyproject.toml  requirements.txt
circuito/Arduino/SistemaEjercicio/: SistemaEjercicio.ino  archivo.ino  data_ejemplo.h  miHabitos.h  miMQTT.ino  miWifi.ino
circuito/Arduino/SistemaEjercicioPantalla/: SistemaEjercicioPantalla.ino  archivo.ino  miHabitos.h  miMQTT.ino  miWifi.ino
data/: habitoEjercicio.md  listaHabitos.md  mqtt.md  notion_ejemplo.md
data/habitos/: habitoCepillarme.md  habitoCurso.md  habitoHistoria.md  habitoOrdenar.md  habitoTiktok.md  habitoYoutube.md  revisionSemanal.md
src/RachaHabitos/: RachaHabitos.py  claseHabitos.py  miGui.py
