[tool.black]
line-length = 119

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rachahabitos"
description = "Herramienta para mantener las rachas de hábitos con notion"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "ChepeCarlos", email = "chepecarlos@chepecarlos.com" }]
license = { file = "LICENSE" }
dynamic = ["version", "dependencies"]

[project.urls]
Homepage = "https://github.com/chepecarlos/RachaHabitos"
Documentation = "https://github.com/chepecarlos/RachaHabitos"
Source = "https://github.com/chepecarlos/RachaHabitos"
Tracker = "https://github.com/chepecarlos/RachaHabitos/issues"

[project.scripts]
rachahabitos = "RachaHabitos.RachaHabitos:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "testing*"]

[tool.setuptools.dynamic]
version = { file = ["VERSION"] }
dependencies = { file = ["requirements.txt"] }
